@startuml

package Entity
 {
    Abstract Entity {
        +<<create>>Entity(X:Integer,Y:Integer,HP:Integer,Strength:Integer,Dex:Integer,Speed:Integer,Initiative:Integer);
        +<<create>>Entity(HP:Integer,Strength:Integer,Dex:Integer,Speed:Integer,Initiative:Integer);
        -posX:Integer
        -posY:Integer
        -hp:Integer
        -strength:Integer
        -dex:Integer
        -initiative:Integer
        -speed:Integer

        +getPosX():Integer
        +getPosY():Integer
        +getHp():Integer
        +getStrength():Integer
        +getDex():Integer
        +getInitiative():Integer
        +getSpeed():Integer
    }

    package Monster {
        class Monster extends Entity.Entity {
            +<<create>>Monster(X:Integer,Y:Integer,HP:Integer,Strength:Integer,Dex:Integer,Speed:Integer,Initiative:Integer,species:String,id:Integer,atkRange:Integer,atkDamage:Dice);
            +<<create>>Monster(HP:Integer,Strength:Integer,Dex:Integer,Speed:Integer,Initiative:Integer,species:String,id:Integer,atkRange:Integer,atkDamage:Dice);
            -species:String
            -id:Integer
            -atkRange:Integer
            -armorClass:Integer
            +getAtkDamage():Integer
        }
    }

    package Personnage{

        Class Personnage extends Entity.Entity {
            -name : String
            +<<create>>Personnage(nom:String, X:Integer, Y:Integer, race:Races, charClass:CharClass);
            +<<create>>Personnage(nom:String, race:Races, charClass:CharClass)
            +getClass():ChrClass
            +getInventory():Equipment
            +getWeapon():Weapon
            +getArmor():Armor
            +getRace():Race
            +equip(equipment:Equipment)
            +take(equipment:Equipment)
        }

        package CharClass{
            abstract Class CharClass{
                -baseHealth:Integer
                +<<create>>CharClass()
                +getHealth():Integer
                +getBaseStuff():Equipment
            }

            package Types {
                Class Clerc extends Entity.Personnage.CharClass.CharClass {
                    +<<create>>Clerc()
                }
                Class Warrior extends Entity.Personnage.CharClass.CharClass{
                    +<<create>>Warrior()
                }
                Class Wizard extends Entity.Personnage.CharClass.CharClass{
                   +<<create>>Wizard()
                }
                Class Rogue extends Entity.Personnage.CharClass.CharClass{
                   +<<create>>Rogue()
                }
            }
        }

        package Race{
            abstract class Race{
                -baseSpeed:Integer
                -baseDex:Integer
                -baseStrength:Integer
                -baseInitiative:Integer
                -name:String

                +getBaseSpeed():Integer
                +getBaseStrength():Integer
                +getBaseDex():Integer
                +getBaseInitiative():Integer

            }
            package Types{
            Class Human extends Entity.Personnage.Race.Race{
                +<<create>>Human()
            }
            Class Dwarf extends Entity.Personnage.Race.Race{
                +<<create>>Dwarf()
            }
            Class Elf extends Entity.Personnage.Race.Race{
                +<<create>>Elf()
            }
            Class Halfelin extends Entity.Personnage.Race.Race{
                +<<create>>Halfelin()
            }
            }
        }

    }
}

package Equipment {
    Abstract Equipment{
        -name: String
        +<<create>>Equipment(name:String);
        +getName() : String
    }

    package Armor {
        Abstract Armor Extends Equipment.Equipment{
            -classVal : Integer
            -speedModifier : Integer
            -name : String
            +<<create>> Armor(name:String,classVal:Integer,speedModifier:Integer)
            + getClassVal() : Integer
            + getSpeedModifier() : Integer
        }

        Abstract Heavy Extends Armor {

        }

        Abstract Light Extends Armor {

        }

        package Types {
            Class ScaleMail Extends Equipment.Armor.Light {

            }

            Class HalfPlate Extends Equipment.Armor.Light {

            }

            Class ChainMail Extends Equipment.Armor.Heavy {

            }

            Class Plate Extends Equipment.Armor.Heavy {

            }
        }
    }

    package Weapon {
        Abstract Weapon Extends Equipment.Equipment {
            -range : Integer
            -speedModifier : Integer
            -strengthModifier : Integer
            -name:String
            +<<create>>Weapon(name:String,range:Integer,damage:Dice);
            +getRange() : Integer
            +getDamage() : Dice
            +getSpeedModifier() : Integer
            +getStrengthModifier() : Integer
        }

        Abstract Simple extends Weapon {

        }

        Abstract Martial extends Weapon {

        }

        Abstract Ranged extends Weapon {

        }

        package Types {

            class Quarterstaff extends Equipment.Weapon.Simple {

            }

            class Mace extends Equipment.Weapon.Simple {

            }

            class Longsword extends Equipment.Weapon.Martial {

            }

            class Rapier extends Equipment.Weapon.Martial {

            }

            class Crossbow extends Equipment.Weapon.Ranged {

            }

            class Sling extends Equipment.Weapon.Ranged {

            }

            class Shortbow extends Equipment.Weapon.Ranged {

            }
        }
    }

}

package Dice{
    Class Dice{
        -value:Integer
        -nbTrhow:Integer
        +<<create>>Dice(trhow:Integer,value:Integer)
        +trhrow():Integer
    }
}

package Donjon{
    Class Donjon{
        -donjonSize : Integer
        -donjonGrid : String[donjonSize][donjonSize]
        +<<create>>Donjon()
        +displayDonjon()
    }
}


Entity.Personnage.Personnage "-charClass"*-up-> Entity.Personnage.CharClass.CharClass : "Est de classe > "
Entity.Personnage.Personnage "-inventory"*-> Equipment.Equipment : "A les équipements > "
Entity.Personnage.Personnage "-weapon"*-> Equipment.Weapon.Weapon : "Armé équipes > "
Entity.Personnage.Personnage "-armor"*--> Equipment.Armor.Armor : "Possède l'armure >"
Entity.Personnage.Personnage "-race"*->Entity.Personnage.Race.Race : "est de race >"

Entity.Personnage.CharClass.CharClass "-<<static>>baseStuff[*]" *----> Equipment.Equipment:"à pour stuff de base >"

Equipment.Weapon.Weapon "-damageDice"*----> Dice.Dice : "Dés de dommages"


Entity.Monster.Monster "\n-atkDamageDice"*---->Dice.Dice : "Dés de dommages"


@enduml
